--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.26.0",
+    "json-server": "^0.17.0",
     "vue": "^3.2.25",
     "vuex": "^4.0.2"
   },
