added server run code

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server":"npx json-server --watch -p 3333 db.json"
   },
   "dependencies": {
     "axios": "^0.26.0",
